--- a/app/src/main/res/layout/git_hub_details.xml
+++ b/app/src/main/res/layout/git_hub_details.xml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:padding="20dp">
+
+
+            <WebView
+                android:id="@+id/htmlView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></WebView>
+
+<!--
+            <ImageView
+                android:id="@+id/profile_img"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_height="200dp"
+                android:layout_width="200dp"
+                android:padding="40dp"
+                />
+
+            <TextView
+                android:id="@+id/item_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin"
+                android:layout_marginRight="@dimen/margin"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:paddingEnd="@dimen/margin"
+                android:paddingRight="@dimen/margin"
+                android:textSize="36dp"
+                app:layout_constraintLeft_toRightOf="@id/item_profile_img"
+                app:layout_constraintTop_toTopOf="@id/item_profile_img" />-->
+
+
 
 </android.support.constraint.ConstraintLayout>
